--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   cached_network_image: ^3.2.2
   intl: ^0.17.0
   shimmer: ^2.0.0
-
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
