--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ flutter:
   assets:
     - assets/icons/
     - assets/bottom_icon/
+    - assets/
+    - assets/fonts/
+    - assets/onboard/
 
   fonts:
     - family: Nunito
