--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shimmer: ^2.0.0
   pull_to_refresh: ^2.0.0
   flutter_staggered_grid_view: ^0.6.2
+  video_player: ^2.4.7
 
 
 dev_dependencies:
