--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   flutter_staggered_grid_view: ^0.6.2
   video_player: ^2.4.7
-
+  google_sign_in: ^5.4.2
 
 dev_dependencies:
   flutter_test:
